--- a/Infrastructure/azure-pipeline.yml
+++ b/Infrastructure/azure-pipeline.yml
@@ -11,7 +11,7 @@ pool:
   vmImage: windows-latest
 
 stages:
-  - stage: DEPLOYINFRA
+  - stage: DEPLOY_INFRA
     jobs:
       - job:
         steps:
