--- a/Tests/main.yml
+++ b/Tests/main.yml
@@ -30,5 +30,5 @@ stages:
 
   - template: myTemplate.yml
     parameters:
-      foo3: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
+      # foo3: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
       foo4: $(valeur)
