--- a/Tests/main.yml
+++ b/Tests/main.yml
@@ -19,17 +19,23 @@ stages:
             name: step1
             displayName: create public variable
 
-  # - stage: Stage2
-  #   variables:
-  #     foo2: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
-  #   jobs:
-  #     - job:
-  #       steps:
-  #         - script: echo $(foo2)
-  #           displayName: read foo2
+  - stage: Stage2
+    variables:
+      foo2b: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
+    jobs:
+      - job:
+        steps:
+          - script: echo $(foo2)
+            displayName: read foo2
 
-  - template: myTemplate.yml
-    parameters:
-      # foo3: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
-      foo3: "##vso[task.setvariable variable=bar;isOutput=true]$[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]"
-      foo4: $(valeur)
+  - stage: Stage2bis
+    jobs:
+      - job:
+        steps:
+          - script: echo $[ stageDependencies.Stage2.outputs['foo2b'] ]
+
+  # - template: myTemplate.yml
+  #   parameters:
+  #     # foo3: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
+  #     foo3: "##vso[task.setvariable variable=bar;isOutput=true]$[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]"
+  #     foo4: $(valeur)
