--- a/Tests/myTemplate.yml
+++ b/Tests/myTemplate.yml
@@ -9,6 +9,6 @@ stages:
     jobs:
       - job:
         steps:
-          # - script: echo ${{ parameters.foo4 }}
+          - script: echo ${{ parameters.foo4 }}
           - script: echo ${{ parameters.foo3 }}
           # - script: echo $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
