--- a/Tests/main.yml
+++ b/Tests/main.yml
@@ -23,19 +23,19 @@ stages:
           - bash: echo $(toto)
             name: step2
 
-  - stage: Stage2
-    variables:
-      foo2b: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
-    jobs:
-      - job:
-        steps:
-          - script: echo $(foo2)
-            displayName: read foo2
-          - script: echo $[ variables.toto ]
-            displayName: read toto
+  # - stage: Stage2
+  #   variables:
+  #     foo2b: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
+  #   jobs:
+  #     - job:
+  #       steps:
+  #         - script: echo $(foo2)
+  #           displayName: read foo2
+  #         - script: echo $[ variables.toto ]
+  #           displayName: read toto
 
-  # - template: myTemplate.yml
-  #   parameters:
-  #     foo3: $(toto)
-  #     # foo3: "##vso[task.setvariable variable=bar;isOutput=true]$[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]"
-  #     foo4: $(valeur)
+  - template: myTemplate.yml
+    parameters:
+      # foo3: $(toto)
+      foo3: "##vso[task.setvariable variable=bar;isOutput=true]$(foo)"
+      foo4: $(valeur)
