--- a/Tests/main.yml
+++ b/Tests/main.yml
@@ -37,5 +37,5 @@ stages:
   - template: myTemplate.yml
     parameters:
       # foo3: $(toto)
-      foo3: "##vso[task.setvariable variable=bar;isOutput=true]$(foo)"
+      foo3: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
       foo4: $(valeur)
