--- a/Tests/main.yml
+++ b/Tests/main.yml
@@ -23,20 +23,16 @@ stages:
           - bash: echo $(toto)
             name: step2
 
-  # - stage: Stage2
-  #   variables:
-  #     foo2b: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
-  #   jobs:
-  #     - job:
-  #       steps:
-  #         - script: echo $(foo2)
-  #           displayName: read foo2
-  #         - script: echo $[ variables.toto ]
-  #           displayName: read toto
+  - stage: Stage2
+    variables:
+      foo2: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
+    jobs:
+      - job:
+        steps:
+          - script: echo $(foo2)
+            displayName: read foo2
 
-  - stage: Stage3First
   - template: myTemplate.yml
     parameters:
       # foo3: $(toto)
-      foo3: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
-      foo4: $(valeur)
+      foo3: $(foo2)
