--- a/Tests/myTemplate.yml
+++ b/Tests/myTemplate.yml
@@ -10,5 +10,5 @@ stages:
       - job:
         steps:
           # - script: echo ${{ parameters.foo4 }}
-          - script: echo ${{ foo3 }}
+          - script: echo ${{ parameters.foo3 }}
           # - script: echo $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
