--- a/Blog/demo.yml
+++ b/Blog/demo.yml
@@ -5,4 +5,4 @@ stages:
     jobs:
       - job: job1
         steps:
-          - script: echo ${{ parameters.foo1 }}
+          - script: echo $(foo1)
