--- a/Blog/demo.yml
+++ b/Blog/demo.yml
@@ -6,7 +6,7 @@ stages:
       - job: job1
         steps:
           - bash: echo $(foo1)
-          - bash: echo "##vso[task.setvariable variable=foo1]$(foo1)"
+          - bash: echo "##vso[task.setvariable variable=foo1;isOutput=true]$(foo1)"
 
   - stage: B
     jobs:
