--- a/Blog/demo.yml
+++ b/Blog/demo.yml
@@ -6,10 +6,11 @@ stages:
       - job: job1
         steps:
           - bash: echo $(foo1)
-          - bash: echo "##vso[task.setvariable variable=foo2;isOutput=true]$(foo1)"
+          - bash: echo "##vso[task.setvariable variable=foo1;isOutput=true]$(foo1)"
+            name: step1
 
   - stage: B
     jobs:
       - job: job2
         steps:
-          - bash: echo $(foo2)
+          - bash: echo $[ stageDependencies.A.job1.outputs['step1.foo1'] ]
