--- a/Blog/demo.yml
+++ b/Blog/demo.yml
@@ -11,7 +11,7 @@ stages:
 
       - job: job2
         variables:
-          foo1: $[ stageDependencies.A.job1.outputs['step1.foo1'] ]
+          foo1: $[ dependencies.A.job1.outputs['step1.foo1'] ]
         steps:
           - bash: echo $(foo1)
 
