--- a/Blog/demo.yml
+++ b/Blog/demo.yml
@@ -10,10 +10,11 @@ stages:
             name: step1
 
       - job: job2
+        dependsOn: [A]
         variables:
-          foo1: $[ dependencies.A.job1.outputs['step1.foo1'] ]
+          foo2: $[ dependencies.A.job1.outputs['step1.foo1'] ]
         steps:
-          - bash: echo $(foo1)
+          - bash: echo $(foo2)
 
   # - stage: B
   #   variables:
