--- a/Tests/main.yml
+++ b/Tests/main.yml
@@ -16,11 +16,11 @@ stages:
           - script: echo $(foo)
             displayName: read foo
 
-          # - bash: echo "##vso[task.setvariable variable=bar;isOutput=true]$(foo)"
-          #   name: step1
-          #   displayName: create public variable
+          - bash: echo "##vso[task.setvariable variable=bar;isOutput=true]$(foo)"
+            name: step1
+            displayName: create public variable
 
-          - bash: echo "##vso[task.setvariable variable=bar;isOutput=true]hello"
+          - bash: echo "##vso[task.setvariable variable=bar2;isOutput=true]hello"
             name: step1
             displayName: create public variable
 
@@ -33,6 +33,5 @@ stages:
   #         - script: echo $(foo2)
   #           displayName: read foo2
   - template: myTemplate.yml
-    # parameters:
-    #   # foo3: $(toto)
-    #   foo3: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
+    parameters:
+      foo3: $[ stageDependencies.Stage1.Job1.outputs['step1.bar'] ]
