--- a/Blog/main.yml
+++ b/Blog/main.yml
@@ -5,7 +5,7 @@ resources:
   repositories:
     - repository: myRepo
       reaf: main
-      type: git
+      type: github
       name: TimeHelper
 
 steps:
