--- a/Blog/main.yml
+++ b/Blog/main.yml
@@ -3,12 +3,18 @@ pool:
 
 resources:
   repositories:
-    - repository: myRepo
+    - repository: myRepo1
       reaf: main
       type: github
       name: DeLeneMirouze/TimeHelper
       endpoint: Github
+    - repository: myRepo2
+      reaf: main
+      type: github
+      name: DeLeneMirouze/EscarGo
+      endpoint: Github
 
 steps:
   - checkout: self
-  - checkout: myRepo
+  - checkout: myRepo1
+  - checkout: myRepo2
