--- a/Blog/main.yml
+++ b/Blog/main.yml
@@ -8,14 +8,17 @@ resources:
       type: github
       name: DeLeneMirouze/TimeHelper
       endpoint: Github
-    # - repository: myRepo2
-    #   reaf: main
-    #   type: github
-    #   name: DeLeneMirouze/EscarGo
-    #   endpoint: Github
+    - repository: myRepo2
+      reaf: main
+      type: github
+      name: DeLeneMirouze/EscarGo
+      endpoint: Github
 
-steps:
-  - checkout: self
-    clean: true
-  - checkout: myRepo1
-  # - checkout: myRepo2
+jobs:
+  - jobs:workspace:
+      clean: all
+    steps:
+      - checkout: self
+        clean: true
+      - checkout: myRepo1
+      # - checkout: myRepo2
