--- a/Blog/main.yml
+++ b/Blog/main.yml
@@ -14,12 +14,14 @@ resources:
       name: DeLeneMirouze/EscarGo
       endpoint: Github
 
-jobs:
-  - jobs:
-    workspace:
-      clean: all
-    steps:
-      - checkout: self
-        clean: true
-      - checkout: myRepo1
-      # - checkout: myRepo2
+stages:
+  - stage: A
+    jobs:
+      - jobs:
+        workspace:
+          clean: all
+        steps:
+          - checkout: self
+            clean: true
+          - checkout: myRepo1
+          # - checkout: myRepo2
