--- a/Blog/main.yml
+++ b/Blog/main.yml
@@ -18,12 +18,10 @@ resources:
 # - job:
 #   workspace:
 #     clean: all
-#   steps:
-#     - checkout: self
-#       clean: true
-#     - checkout: myRepo1
-#     # - checkout: myRepo2
+# steps:
+#   - script: dir
+# - checkout: myRepo2
 
 steps:
+  - checkout: self
   - script: dir
-  - script: echo "hello le monde!"
